--- a/main.css
+++ b/main.css
@@ -4,8 +4,12 @@
 }
 
 .navBar{
+    text-decoration: none;
     font-family: "Source Sans Pro", sans-serif;
-    font-weight: bold;
+    font-weight: bold ;
+    color: black;
+    border: 3px solid white;
+    position: sticky;
 }
 
 .description{
@@ -17,15 +21,36 @@
     width: 10%;
 }
 
-.pythonimage{
-    width: 1%;
-    position: absolute;
-    right: 43%;
-}
-
 .cp{
     font-family: "Sorce Sans Pro", sans-serif;
     text-align: center;
+}
+
+.pokemonBotGif{
+    transform: translateX(20%);
+    width: 17%;
+}
+
+.pokemonBotButton{
+    transform: translateX(20%);
+    font-family: "Sorce Sans Pro", sans-serif;
+    border: white;
+    background-color: black;
+    color: white;
+    text-decoration: none;
+    padding: 7px;
+    font-size: 200%;
+    border-radius: 15px;
+    box-shadow: 0 5px #999;
+    outline: none;
+}
+.pokemonBotButton:active{
+    box-shadow: 0 3px #666;
+    transform: translateY(4px);
+}
+
+.bottomLine{
+    transform: translateY(7px);
 }
 
 .splash{
