--- a/main.css
+++ b/main.css
@@ -27,12 +27,13 @@
 }
 
 .pokemonBotGif{
-    transform: translateX(20%);
+    min-width: 17%;
     width: 17%;
+    position: static;
 }
 
 .pokemonBotButton{
-    transform: translateX(20%);
+    transform: translateY(5%);
     font-family: "Sorce Sans Pro", sans-serif;
     border: white;
     background-color: black;
@@ -74,8 +75,8 @@
     color: white;
     font-family: "Sorce Sans Pro", sans-serif;
     position: absolute;
-    top 0;
-    left 0;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100vh;
     background: black;
