--- a/main.css
+++ b/main.css
@@ -1,6 +1,8 @@
 .mainTitle{
     font-family: "Sorce Sans Pro", sans-serif;
     text-align: center;
+    position: sticky;
+    top: 20px
 }
 
 .navBar{
@@ -8,8 +10,9 @@
     font-family: "Source Sans Pro", sans-serif;
     font-weight: bold ;
     color: black;
-    border: 3px solid white;
+    border: 6px solid white;
     position: sticky;
+    left: 7px;
 }
 
 .description{
@@ -51,15 +54,13 @@
     transform: translateY(4px);
 }
 
-.pokemonBotRect{
-    border-radius: 15px;
-}
-
-.bottomLine{
-    transform: translateY(7px);
+.allCards{
+    position: relative;
+    left: 10px;
 }
 
 .splash{
+    position: sticky;
     left: 0%;
     top: 0%;
     background: black;
@@ -70,7 +71,6 @@
     height: 100%;
     background-position: center;
     background-size: cover;
-    line-height: 90vh;
     text-align: center;
     z-index: 1;
 }
@@ -98,6 +98,8 @@
 }
 
 .fade-in{
+    position: sticky;
+    top: 40%;
     opacity: 0;
     animation: fadeIn 1s ease-in forwards;
 }
